# stream

./: .gitignore  CMakeLists.txt  README.md
framework/include/: plugin.h
plugins/algorithm/yolov5/include/: yolov5.h
plugins/algorithm/yolov5/src/: yolov5.cpp
plugins/algorithm/yolov8/include/: yolov8.h
plugins/algorithm/yolov8/src/: yolov8.cpp
test/demo_test/: CMakeLists.txt  math.cpp  math.h  test.cpp
